[metadata]
name = loos
version = 4.1.0
author = The Loos Developers
author_email = loos.maintainer@gmail.com
description = Python packages extending loos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GrossfieldLab/loos
project_urls =
    Bug Tracker = https://github.com/GrossfieldLab/loos/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts = 
		area_per_molecule = loos.Voronoi.area_per_molecule:main
		area_profile = loos.Voronoi.area_profile:main
		lipid_lifetime = loos.Voronoi.lipid_lifetime:main
		run_areas = loos.Voronoi.run_areas:main
        add_molecules = loos.OptimalMembraneGenerator.add_molecules:main
        OptimalMembraneGenerator = loos.OptimalMembraneGenerator.OptimalMembraneGenerator:main
        solvate = loos.OptimalMembraneGenerator.solvate:main
        omg_copy = loos.OptimalMembraneGenerator.omg_copy:main
        make_library = loos.OptimalMembraneGenerator.make_library:main

[options.packages.find]
where = src


